# forum

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum  main.go
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: go.yml
BackEnd/: .gitignore  go.mod  go.sum  main.go
BackEnd/models/: model.go
BackEnd/proto/: auth.proto  chat.proto  forum.pb.go  forum.proto  forum_grpc.pb.go  friend.proto
BackEnd/services/: forumService.go  friendService.go
BackEndCpp/: .gitignore  CMakeLists.txt  main.cc  mysqlDb.hpp
BackEndCpp/proto/: forum.proto
BackEndCpp/service/: database.hpp  forumService.cc  user.cpp  user.hpp
BackEndCpp/src/: forumService.cc  forum_service_impl.cc  forum_service_impl.hpp
FrontEnd/: .gitignore
config/: __app.yml
hel/: main.go
models/: model.go
proto/: forum.proto
service/: forumService.go
services/: forumService.go
